rbac-best-practices-cel/restrict-wildcard-resources/e2e/good-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr01
rules:
- apiGroups: [""]
  resources: ["pods", "namespaces"]
  verbs: ["get", "watch", "list"]
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "watch", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr02
rules:
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "create", "update"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr03
rules:
- apiGroups: ["batch"]
  resources: ["secrets"]
  verbs: ["create", "update", "patch"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr04
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr05
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["create", "update", "patch"]
---
# If 'rules' is specified without a value, 
# the field will be set to 'rules: null' by default when the resource is created in the cluster.
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr-empty-rules
rules: 
---
# If the 'rules' field is omitted from the manifest, 
# the field will be set to 'rules: null' by default when the resource is created in the cluster.
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr-omitted-rules
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodcr-null-rules
  rules: null
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole01
rules:
- apiGroups: [""]
  resources: ["pods", "namespaces"]
  verbs: ["get", "watch", "list"]
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "watch", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole02
rules:
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "create", "update"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole03
rules:
- apiGroups: ["batch"]
  resources: ["secrets"]
  verbs: ["create", "update", "patch"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole04
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole05
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["create", "update", "patch"]
---
# If 'rules' is specified without a value, 
# the field will be set to 'rules: null' by default when the resource is created in the cluster.
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodcr-empty-rules
rules: 
---
# If the 'rules' field is omitted from the manifest, 
# the field will be set to 'rules: null' by default when the resource is created in the cluster.
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodcr-omitted-rules
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodcr-null-rules
  rules: null
