rbac-best-practices-cel/restrict-wildcard-resources/e2e/vap-binding-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-wildcard-resources-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-wildcard-resources
spec:
  policyName: restrict-wildcard-resources
